--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
+<body class="main">
+    <p id="first">first paragraph</p>
+    <br>
+    <div id="second">
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odit quo illum ex maiores doloribus quia quos est, blanditiis esse, eius perferendis exercitationem eligendi libero sapiente aperiam. Excepturi corrupti placeat quidem aperiam, modi fugit neque! Aspernatur asperiores accusantium eius facilis velit.</p>
+        <br>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem quisquam recusandae nobis possimus perferendis doloremque molestiae enim atque laborum impedit voluptatum minus aperiam, illum accusantium, facere, architecto at aut. Inventore ipsum sint excepturi quia tenetur non quibusdam recusandae libero animi!</p>
+        <br>
+    </div>
+    
 
+    <p id="third">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias officia iure itaque voluptate, earum praesentium quas. Esse cupiditate provident nulla eos deserunt? Nihil ducimus ratione sunt tempore facilis velit minus veniam commodi doloribus! Qui nihil rem nobis veritatis sint minus.</p>
+    <br>
+    <ul class="uli">
+        <li id="normal">First item</li>
+        <li id="gray">Second item</li>
+        <li id="pink">Third item</li>
+        <li id="gray">Fourth item</li>
+        <li id="normal">?Fifth item</li>
+    </ul>
 </body>
-
 </html>
