--- a/main.html
+++ b/main.html
@@ -3,23 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Your Page Title</title>
 </head>
 <body>
-    <div class="page-content">
-        <article>
-            <p>First paragraph</p>
-            <p>Second paragraph content lorem36</p>
-            <p>Third paragraph content lorem35</p>
-        </article>
+   <div>
+        <p id="first-child">Paragraph</p>
+        <p id="nth-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure alias voluptatibus tempora impedit necessitatibus iusto reiciendis? Sequi repellendus recusandae perspiciatis esse maiores saepe, tempore quia, repudiandae quas similique ipsa quaerat.</p>
+        <p id="last-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est, expedita quis nostrum, a dignissimos saepe cumque labore sint ullam reprehenderit nam, aperiam ab voluptatem? Aliquid, molestias. Beatae veniam, nisi eligendi explicabo praesentium earum quam soluta, tenetur, neque dicta recusandae?</p>
+
+    
+    </div>
+    <div>
         <ul>
-            <li id="normal">Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
-            <li id="normal">Item 5</li>
+            <li class="first_last">First Item</li>
+            <li class="second_fourth">Second Item</li>
+            <li id="middle">Third Item</li>
+            <li class="second_fourth">Fourth Item</li>
+            <li class="first_last">Fifth Item</li>
+            
         </ul>
     </div>
+
 </body>
 </html>
