--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
    <div>
         <p id="first-child">Paragraph</p>
+	    <p id="nth-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure alias voluptatibus tempora impedit necessitatibus iusto reiciendis? Sequi repellendus recusandae perspiciatis esse maiores saepe, tempore quia, repudiandae quas similique ipsa quaerat.</p>
         <p id="nth-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure alias voluptatibus tempora impedit necessitatibus iusto reiciendis? Sequi repellendus recusandae perspiciatis esse maiores saepe, tempore quia, repudiandae quas similique ipsa quaerat.</p>
         <p id="last-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est, expedita quis nostrum, a dignissimos saepe cumque labore sint ullam reprehenderit nam, aperiam ab voluptatem? Aliquid, molestias. Beatae veniam, nisi eligendi explicabo praesentium earum quam soluta, tenetur, neque dicta recusandae?</p>
 
@@ -18,7 +19,7 @@
         <ul>
             <li class="first_last">First Item</li>
             <li class="second_fourth">Second Item</li>
-            <li id="middle">Third Item</li>
+            <li class="middle">Third Item</li>
             <li class="second_fourth">Fourth Item</li>
             <li class="first_last">Fifth Item</li>
             
