--- a/main.html
+++ b/main.html
@@ -7,24 +7,20 @@
     <title>Your Page Title</title>
 </head>
 <body>
-   <div>
-        <p id="first-child">Paragraph</p>
-        <p id="nth-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure alias voluptatibus tempora impedit necessitatibus iusto reiciendis? Sequi repellendus recusandae perspiciatis esse maiores saepe, tempore quia, repudiandae quas similique ipsa quaerat.</p>
-        <p id="nth-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure alias voluptatibus tempora impedit necessitatibus iusto reiciendis? Sequi repellendus recusandae perspiciatis esse maiores saepe, tempore quia, repudiandae quas similique ipsa quaerat.</p>
-        <p id="last-child">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel est, expedita quis nostrum, a dignissimos saepe cumque labore sint ullam reprehenderit nam, aperiam ab voluptatem? Aliquid, molestias. Beatae veniam, nisi eligendi explicabo praesentium earum quam soluta, tenetur, neque dicta recusandae?</p>
-
-    
-    </div>
     <div>
+        <article>
+            <p id="first-child">First paragraph</p>
+            <p id="nth-child">Second paragraph content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatibus maxime cum sed nostrum impedit sint doloribus fugiat eius natus.</p>
+            <p id="nth-child">Second paragraph content Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores voluptatibus maxime cum sed nostrum impedit sint doloribus fugiat eius natus.</p>
+            <p id="last-child">Third paragraph content Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eaque deleniti accusantium nemo maiores a, facilis autem aliquam, asperiores excepturi distinctio quae, earum tempore repudiandae dicta placeat? Totam temporibus necessitatibus architecto sequi ducimus!</p>
+        </article>
         <ul>
-            <li class="first_last">First Item</li>
-            <li class="second_fourth">Second Item</li>
-            <li id="middle">Third Item</li>
-            <li class="second_fourth">Fourth Item</li>
-            <li class="first_last">Fifth Item</li>
-            
+            <li class="first_last">Item 1</li>
+            <li class="second_fourth">Item 2</li>
+            <li id="middle">Item 3</li>
+            <li class="second_fourth">Item 4</li>
+            <li class="first_last">Item 5</li>
         </ul>
     </div>
-
 </body>
 </html>
