--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
         <ul>
             <li class="first_last">Item 1</li>
             <li class="second_fourth">Item 2</li>
-            <li id="middle">Item 3</li>
+            <li class="middle">Item 3</li>
             <li class="second_fourth">Item 4</li>
             <li class="first_last">Item 5</li>
         </ul>
